<resources>
    <string name="app_name">HenryProject-FFBF</string>
    <string name="app_title">For Foodie By Foodie</string>
    <string name="your_foodie_app">Your Foodie App</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="restaurants">Restaurants</string>
    <string name="for_foodie_by_foodie">Restaurants</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="todo">TODO</string>
    <string name="add_a_new_restaurant">Add a New Restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="url">URL</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="description">Description</string>
    <string name="add_a_street_vendor">Add A Street Vendor</string>
</resources>
